# anoverif

./: .gitignore  BENCHMARKING_REPORT.md  CMakeLists.txt  Dockerfile  LICENSE  PERFORMANCE_OPTIMIZATION.md  PRIVACY_ARCHITECTURE.md  README.md  SEGFAULT_FIX_REPORT.md  advanced_benchmark.py  analyze_timing.py  benchmark.sh  build.sh  config.txt  docker-compose.yml  example.sh  privacy_demo.sh  start.sh  visualize_timing.py
src/: advanced_benchmark.cpp  anon_server.cpp  config.cpp  config.h  dummy_api.cpp  dummy_api_old.cpp  hash_utils.cpp  hash_utils.h  http_client.cpp  http_client.h  simple_timing_benchmark.cpp  test_client.cpp
